--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@
   <input type="number" id="marketValue" placeholder="예: 500,000,000">
 
   <small style="color:#555;">
-    아파트는 KB시세(일반가)를 입력하세요 👉 
-    <a href="https://onland.kbstar.com/quics?page=C030590" target="_blank" style="color:#2c7be5; text-decoration:underline;">
+    **아파트는 KB시세(일반가)를 입력하세요 👉 
+    <a href="https://kbland.kr/" target="_blank" style="color:#2c7be5; text-decoration:underline;">
       [KB시세 바로가기]
     </a>
   </small>
+
   
   <!-- Step 4 -->
   <label>Step 4. 선순위 대출 원금 + 임대보증금 (원)</label>
@@ -104,4 +105,5 @@
       const region = document.getElementById("region").value;
       const propertyType = document.getElementById("propertyType").value;
       const marketValue = Number(document.get
+
 
