--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 500px;
+      max-width: 800px;
       margin: 30px auto;
       padding: 20px;
       border: 1px solid #ddd;
       border-radius: 12px;
       background: #fafafa;
+      display: flex;
+      gap: 20px;
     }
     h2 { text-align: center; }
     label { font-weight: bold; display: block; margin: 10px 0 5px; }
-    select, input {
+    input, select {
       width: 100%;
       padding: 8px;
       margin-bottom: 15px;
@@ -42,74 +44,96 @@
       border: 1px solid #d0e6ff;
     }
     small { display: block; margin-bottom: 15px; }
+    .calculator { flex: 1; }
+    .side-design {
+      flex: 1;
+      background: url('datacenter.jpg') center/cover no-repeat;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 12px;
+    }
+    .side-design img { width: 250px; }
   </style>
 </head>
 <body>
-  <h2>🏦 대출 LTV 계산기</h2>
+  <div class="calculator">
+    <h2>🏦 후추 데이터를 통한 대출 계산기</h2>
 
-  <!-- Step 1 -->
-  <label>Step 1. 지역을 선택해주세요</label>
-  <select id="region">
-    <option value="">선택하세요</option>
-    <option value="서울">서울</option>
-    <option value="서울 외">서울 외</option>
-  </select>
+    <!-- Step 1 -->
+    <label>Step 1. 지역을 선택해주세요</label>
+    <select id="region">
+      <option value="">선택하세요</option>
+      <option value="서울">서울</option>
+      <option value="서울 외">서울 외</option>
+    </select>
 
-  <!-- Step 2 -->
-  <label>Step 2. 부동산 종류를 선택해주세요</label>
-  <select id="propertyType">
-    <option value="">선택하세요</option>
-    <option value="아파트">아파트</option>
-    <option value="다세대/연립">다세대/연립</option>
-    <option value="단독/다가구">단독/다가구</option>
-    <option value="토지/임야">토지/임야</option>
-  </select>
+    <!-- Step 2 -->
+    <label>Step 2. 부동산 종류를 선택해주세요</label>
+    <select id="propertyType">
+      <option value="">선택하세요</option>
+      <option value="아파트">아파트</option>
+      <option value="다세대/연립">다세대/연립</option>
+      <option value="단독/다가구">단독/다가구</option>
+      <option value="토지/임야">토지/임야</option>
+    </select>
 
-  <!-- Step 3 -->
-  <label>Step 3. 내가 생각하는 시세 (원)</label>
-  <input type="number" id="marketValue" placeholder="예: 500,000,000">
-  <small style="color:#555;">
-    아파트는 KB시세(일반가)를 입력하세요 👉 
-    <a href="https://onland.kbstar.com/quics?page=C030590" target="_blank" style="color:#2c7be5; text-decoration:underline;">
-      [KB시세 바로가기]
-    </a>
-  </small>
+    <!-- Step 3 -->
+    <label>Step 3. 내가 생각하는 시세 (원)</label>
+    <input type="text" id="marketValue" placeholder="예: 500,000,000">
+    <small style="color:#555;">
+      아파트는 KB시세(일반가)를 입력하세요 👉 
+      <a href="https://onland.kbstar.com/quics?page=C030590" target="_blank" style="color:#2c7be5; text-decoration:underline;">
+        [KB시세 바로가기]
+      </a>
+    </small>
 
-  <!-- Step 4 -->
-  <label>Step 4. 선순위 대출 원금 + 임대보증금 (원)</label>
-  <input type="number" id="seniorLoan" placeholder="예: 100,000,000">
+    <!-- Step 4 -->
+    <label>Step 4. 선순위 대출 원금 + 임대보증금 (원)</label>
+    <input type="text" id="seniorLoan" placeholder="예: 100,000,000">
 
-  <!-- Step 5 -->
-  <label>Step 5. 필요한 대출 금액 (원)</label>
-  <input type="number" id="requestedLoan" placeholder="예: 50,000,000">
+    <!-- Step 5 -->
+    <label>Step 5. 필요한 대출 금액 (원)</label>
+    <input type="text" id="requestedLoan" placeholder="예: 50,000,000">
 
-  <button onclick="calculateLTV()">계산하기</button>
+    <button onclick="calculateLTV()">계산하기</button>
+    <div class="result" id="resultBox" style="display:none;"></div>
+  </div>
 
-  <div class="result" id="resultBox" style="display:none;"></div>
+  <div class="side-design">
+    <img src="huchu.png" alt="후추 캐릭터">
+  </div>
 
   <script>
     // 🔹 관리자 설정: 지역/부동산별 최대 LTV 값
     const LTV_LIMITS = {
-      "서울": {
-        "아파트": 0.73,
-        "다세대/연립": 0.70,
-        "단독/다가구": 0.70,
-        "토지/임야": 0.70
-      },
-      "서울 외": {
-        "아파트": 0.6998,
-        "다세대/연립": 0.6500,
-        "단독/다가구": 0.6500,
-        "토지/임야": 0.4999
-      }
+      "서울": { "아파트": 0.73, "다세대/연립": 0.70, "단독/다가구": 0.70, "토지/임야": 0.70 },
+      "서울 외": { "아파트": 0.6998, "다세대/연립": 0.6500, "단독/다가구": 0.6500, "토지/임야": 0.4999 }
     };
 
+    // 🔹 3자리 콤마 자동 표시
+    function formatNumberInput(id) {
+      const input = document.getElementById(id);
+      input.addEventListener('input', () => {
+        let value = input.value.replace(/,/g, '');
+        if(!isNaN(value) && value !== '') {
+          input.value = Number(value).toLocaleString();
+        } else {
+          input.value = '';
+        }
+      });
+    }
+    formatNumberInput('marketValue');
+    formatNumberInput('seniorLoan');
+    formatNumberInput('requestedLoan');
+
+    // 🔹 계산 함수
     function calculateLTV() {
       const region = document.getElementById("region").value;
       const propertyType = document.getElementById("propertyType").value;
-      const marketValue = Number(document.getElementById("marketValue").value);
-      const seniorLoan = Number(document.getElementById("seniorLoan").value);
-      const requestedLoan = Number(document.getElementById("requestedLoan").value);
+      const marketValue = Number(document.getElementById("marketValue").value.replace(/,/g, ''));
+      const seniorLoan = Number(document.getElementById("seniorLoan").value.replace(/,/g, ''));
+      const requestedLoan = Number(document.getElementById("requestedLoan").value.replace(/,/g, ''));
 
       if (!region || !propertyType || !marketValue) {
         alert("모든 입력값을 채워주세요!");
@@ -117,14 +141,13 @@
       }
 
       const maxLtvRatio = LTV_LIMITS[region][propertyType];
-      const maxLoan = marketValue * maxLtvRatio;  // 총 허용 가능한 최대 대출
-      const availableLoan = maxLoan - seniorLoan; // 신규로 가능한 대출
-      const currentLtv = ((seniorLoan) / marketValue) * 100; // 선순위 기준 현 LTV%
+      const maxLoan = marketValue * maxLtvRatio;
+      const availableLoan = maxLoan - seniorLoan;
+      const currentLtv = (seniorLoan / marketValue) * 100;
 
-      // 요청 금액 반영
       let loanStatus = "";
       if (!requestedLoan) {
-        loanStatus = `신규 대출 가능 금액: ${availableLoan > 0 ? availableLoan.toLocaleString()+" 원" : "불가능"}`;
+        loanStatus = `신규 대출 가능 금액: ${availableLoan > 0 ? availableLoan.toLocaleString() + " 원" : "불가능"}`;
       } else if (requestedLoan <= availableLoan) {
         loanStatus = `요청 금액 ${requestedLoan.toLocaleString()}원 가능 ✅`;
       } else {
@@ -135,8 +158,7 @@
       resultText += `- 선택한 지역: ${region}<br>`;
       resultText += `- 부동산 종류: ${propertyType}<br>`;
       resultText += `- 시세: ${marketValue.toLocaleString()} 원<br>`;
-      resultText += `- 선순위 대출+보증금: ${seniorLoan.toLocaleString()} 원<br>`;
-      resultText += `<br>`;
+      resultText += `- 선순위 대출+보증금: ${seniorLoan.toLocaleString()} 원<br><br>`;
       resultText += `👉 적용 최대 LTV: ${(maxLtvRatio * 100).toFixed(0)}%<br>`;
       resultText += `👉 현재 LTV(선순위 기준): ${currentLtv.toFixed(1)}%<br>`;
       resultText += `👉 ${loanStatus}`;
