--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
   <div class="calculator">
-    <h2>🏦 후추 데이터를 통한 대출 계산기</h2>
+    <h2>🏦 후추 데이터 기반 담보대출 계산기</h2>
 
     <!-- Step 1 -->
     <label>Step 1. 지역을 선택해주세요</label>
@@ -169,3 +169,4 @@
   </script>
 </body>
 </html>
+
