--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
   <div class="calculator">
-    <h2>🏦 대출 LTV 계산기</h2>
+    <h2>🏦 후추 데이터 기반 담보대출 계산기</h2>
 
     <!-- Step 1 -->
     <label>Step 1. 지역을 선택해주세요</label>
@@ -82,10 +82,6 @@
     <input type="text" id="requestedLoan" placeholder="예: 50,000,000">
 
     <div class="result" id="resultBox" style="display:none;"></div>
-  </div>
-
-  <div class="side-design">
-    <img src="huchu.png" alt="후추 캐릭터">
   </div>
 
   <!-- EmailJS SDK -->
@@ -185,3 +181,4 @@
         message: message
       })
       .then
+
