--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <input type="text" id="marketValue" placeholder="예: 500,000,000">
     <small style="color:#555;">
       아파트는 KB시세(일반가)를 입력하세요 👉 
-      <a href="https://onland.kbstar.com/quics?page=C030590" target="_blank" style="color:#2c7be5; text-decoration:underline;">
+      <a href="https://kbland.kr/" target="_blank" style="color:#2c7be5; text-decoration:underline;">
         [KB시세 바로가기]
       </a>
     </small>
@@ -181,4 +181,5 @@
         message: message
       })
       .then
+
 
