--- a/index.html
+++ b/index.html
@@ -3,56 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>LTV 계산기</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 900px;
-      margin: 30px auto;
-      padding: 20px;
-      display: flex;
-      gap: 20px;
-      background: #fafafa;
-    }
-    h2 { text-align: center; }
-    label { font-weight: bold; display: block; margin: 10px 0 5px; }
-    select, input, textarea {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 15px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 15px;
-    }
-    button {
-      width: 100%;
-      padding: 12px;
-      background: #2c7be5;
-      color: white;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    button:hover { background: #1a5bb8; }
-    .result {
-      margin-top: 20px;
-      padding: 15px;
-      border-radius: 10px;
-      background: #f0f8ff;
-      border: 1px solid #d0e6ff;
-    }
-    small { display: block; margin-bottom: 15px; }
-    .calculator { flex: 1; }
-    .side-design {
-      flex: 1;
-      background: url('datacenter.jpg') center/cover no-repeat;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 12px;
-    }
-    .side-design img { width: 250px; }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="calculator">
@@ -76,9 +27,9 @@
 
     <label>Step 3. 내가 생각하는 시세 (원)</label>
     <input type="text" id="marketValue" placeholder="예: 500,000,000">
-    <small style="color:#555;">
+    <small>
       아파트는 KB시세(일반가)를 입력하세요 👉 
-      <a href="https://kbland.kr/" target="_blank" style="color:#2c7be5; text-decoration:underline;">[KB시세 바로가기]</a>
+      <a href="https://onland.kbstar.com/quics?page=C030590" target="_blank">[KB시세 바로가기]</a>
     </small>
 
     <label>Step 4. 선순위 대출 원금 + 임대보증금 (원)</label>
@@ -88,112 +39,14 @@
     <input type="text" id="requestedLoan" placeholder="예: 50,000,000">
 
     <button id="calcBtn">계산하기</button>
-
     <div class="result" id="resultBox" style="display:none;"></div>
   </div>
 
   <div class="side-design">
-    <img src="huchu.png" alt="후추 캐릭터">
+    <img src="img/huchu.png" alt="후추 캐릭터">
   </div>
 
   <script src="https://cdn.emailjs.com/sdk/3.2.0/email.min.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      // EmailJS 초기화
-      emailjs.init("22FTCISS9zfQspQtj");
-
-      const LTV_LIMITS = {
-        "서울": { "아파트": 0.73, "다세대/연립": 0.70, "단독/다가구": 0.70, "토지/임야": 0.70 },
-        "서울 외": { "아파트": 0.6998, "다세대/연립": 0.6500, "단독/다가구": 0.6500, "토지/임야": 0.4999 }
-      };
-
-      // 3자리 콤마 입력
-      ['marketValue','seniorLoan','requestedLoan'].forEach(id => {
-        const input = document.getElementById(id);
-        input.addEventListener('input', () => {
-          let value = input.value.replace(/,/g,'');
-          if(!isNaN(value) && value!=='') input.value = Number(value).toLocaleString();
-        });
-      });
-
-      const calcBtn = document.getElementById('calcBtn');
-      calcBtn.addEventListener('click', () => {
-        const region = document.getElementById("region").value;
-        const propertyType = document.getElementById("propertyType").value;
-        const marketValue = Number(document.getElementById("marketValue").value.replace(/,/g,''));
-        const seniorLoan = Number(document.getElementById("seniorLoan").value.replace(/,/g,''));
-        const requestedLoan = Number(document.getElementById("requestedLoan").value.replace(/,/g,''));
-
-        if(!region || !propertyType || !marketValue){
-          alert("모든 입력값을 채워주세요!");
-          return;
-        }
-
-        const maxLtvRatio = LTV_LIMITS[region][propertyType];
-        const maxLoan = marketValue * maxLtvRatio;
-        const availableLoan = maxLoan - seniorLoan;
-        const currentLtv = (seniorLoan / marketValue) * 100;
-
-        let loanStatus = "";
-        if(!requestedLoan){
-          loanStatus = `신규 대출 가능 금액: ${availableLoan>0 ? availableLoan.toLocaleString()+" 원" : "불가능"}`;
-        } else if(requestedLoan <= availableLoan){
-          loanStatus = `요청 금액 ${requestedLoan.toLocaleString()}원 가능 ✅`;
-        } else {
-          loanStatus = `요청 금액 초과 ❌, 최대 ${availableLoan.toLocaleString()}원 가능`;
-        }
-
-        let resultText = `<b>📊 결과</b><br>`;
-        resultText += `- 선택한 지역: ${region}<br>`;
-        resultText += `- 부동산 종류: ${propertyType}<br>`;
-        resultText += `- 시세: ${marketValue.toLocaleString()} 원<br>`;
-        resultText += `- 선순위 대출+보증금: ${seniorLoan.toLocaleString()} 원<br><br>`;
-        resultText += `👉 적용 최대 LTV: ${(maxLtvRatio*100).toFixed(0)}%<br>`;
-        resultText += `👉 현재 LTV(선순위 기준): ${currentLtv.toFixed(1)}%<br>`;
-        resultText += `👉 ${loanStatus}`;
-        resultText += `<br><br><button id='requestBtn'>대출 기관 연결 요청하기</button>`;
-
-        const resultBox = document.getElementById("resultBox");
-        resultBox.style.display = "block";
-        resultBox.innerHTML = resultText;
-
-        document.getElementById('requestBtn').addEventListener('click', showRequestForm);
-      });
-
-      function showRequestForm(){
-        const resultBox = document.getElementById("resultBox");
-        const requestedLoan = document.getElementById("requestedLoan").value;
-        resultBox.innerHTML = `
-          <h3>대출 연결 요청</h3>
-          <label>이름</label><input type="text" id="reqName" placeholder="홍길동">
-          <label>이메일</label><input type="email" id="reqEmail" placeholder="example@domain.com">
-          <label>전화번호</label><input type="text" id="reqPhone" placeholder="010-1234-5678">
-          <label>요청 내용</label><textarea id="reqMessage" rows="5">요청 대출 금액: ${requestedLoan}</textarea>
-          <button id='sendBtn'>입력 완료</button>
-        `;
-        document.getElementById('sendBtn').addEventListener('click', sendRequestEmail);
-      }
-
-      function sendRequestEmail(){
-        const name = document.getElementById("reqName").value;
-        const email = document.getElementById("reqEmail").value;
-        const phone = document.getElementById("reqPhone").value;
-        const message = document.getElementById("reqMessage").value;
-
-        if(!name || !email || !message){
-          alert("필수 항목을 모두 입력해주세요.");
-          return;
-        }
-
-        emailjs.send('huchudb@gmail.com', 'template_v94yxrv', {
-          from_name: name,
-          from_email: email,
-          from_phone: phone,
-          message: message
-        }).then(() => alert("요청이 성공적으로 발송되었습니다."),
-                (err) => alert("오류가 발생했습니다: " + err.text));
-      }
-    });
-  </script>
+  <script src="js/main.js"></script>
 </body>
 </html>
