--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     // EmailJS 설정 (사용자 제공 값)
     const EMAILJS_PUBLIC_KEY = "22FTCISS9zfQspQtj";
-    const EMAILJS_SERVICE_ID = "service_2fcve4r";    
+    const EMAILJS_SERVICE_ID = "huchudb@gmail.com";     // ⚠️ 보통 'service_xxxxx' 형태여야 합니다.
     const EMAILJS_TEMPLATE_ID = "template_v94yxrv";
 
     /* ===== 2) 유틸 ===== */
